--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,19 @@
 /*header*/
 
 header {
-  background-color: rgb(173, 216, 230);
+  background-image: url("../img/jumbo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  flex-direction: column;
+  /* padding: 10px; */
 }
 
-.navbar-wrapper {
+.wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: dashed black 2px;
   max-width: 80%;
   width: 1000px;
   height: 40px;
@@ -27,7 +29,6 @@ header {
 }
 
 .navbar-logo {
-  border: dashed black 2px;
   padding: 10px;
   width: 200px;
 }
@@ -35,7 +36,6 @@ header {
 .navbar-link {
   display: flex;
   justify-content: center;
-  border: dashed black 2px;
   padding: 10px;
   gap: 10px;
   flex-grow: 1;
@@ -44,7 +44,7 @@ header {
 
 .navbar-login {
   text-align: right;
-  border: dashed black 2px;
+  /* border: dashed black 2px; */
   padding: 10px;
   width: 200px;
 }
@@ -53,16 +53,16 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid gray 2px;
+  /* border: solid gray 2px; */
   width: 100%;
-  height: 500px;
+  height: 490px;
 }
 
 .hello-box {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: dashed black 2px;
+  /* border: dashed black 2px; */
   width: 50%;
   height: 80%;
 }
