--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@ header {
   color: #fff;
 }
 
+/* buttons */
+button {
+  padding: 10px;
+  border: none;
+  border-radius: 30px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
 /* navbar */
 .navbar-wrapper {
   display: flex;
@@ -79,10 +88,13 @@ header {
   height: 80%;
 }
 
-.hello-text {
-}
+/* .hello-text {} */
 
 .hello-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .hello-text h1 {
@@ -92,7 +104,7 @@ header {
 
 .hello-text p {
   font-size: 18px;
-  padding-bottom: 150px;
+  padding-bottom: 50px;
 }
 
 .hello-box-2 {
@@ -191,6 +203,14 @@ header {
   background-color: rgb(35, 39, 42);
 }
 
+.bg-black-dark {
+  background-color: rgb(0, 0, 0);
+}
+
+.bg-white {
+  background-color: rgb(255, 255, 255);
+}
+
 .bg-celeste-chiaro {
   background-color: rgb(127, 255, 212);
 }
@@ -219,4 +239,8 @@ footer {
 .bottone {
   border: dashed black 2px;
   background-color: pink;
+}
+
+.cl-white {
+  color: #fff;
 }
