add libreria vista in classe, e arrow-down

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ button {
   border-radius: 30px;
   font-size: 25px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 /* navbar */
