cambio flex-direction per i box del main

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ button {
 }
 
 /* hello */
+
 .hello-wrapper {
   display: flex;
   justify-content: center;
@@ -78,9 +79,15 @@ button {
   height: 490px;
 }
 
-.hello-box {
+header .hello-box {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.hello-box {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
 
   /* alla fine eliminare width ed height */
