--- a/css/style.css
+++ b/css/style.css
@@ -108,9 +108,17 @@ header .hello-box {
   padding-bottom: 50px;
 }
 
-/* box-img e box-txt */
+/* boxe */
 
-.hello-box {
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 490px;
+}
+
+.box {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -127,6 +135,7 @@ header .hello-box {
   background-repeat: no-repeat;
 }
 
+/* 
 .hello-box-2 {
   display: flex;
   justify-content: center;
@@ -137,7 +146,7 @@ header .hello-box {
   margin: 0 0 20px 0;
 }
 
-.hello-wrapper.double {
+.wrapper.double {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,6 +177,7 @@ header .hello-box {
 .brd-black {
   border: dashed black 2px;
 }
+ */
 
 /* flex */
 .flex-5 {
