--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ header .hello-box {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 490px;
+  height: 500px;
 }
 
 .box {
@@ -123,16 +123,28 @@ header .hello-box {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
-  /* alla fine eliminare width ed height */
-  width: 50%;
+  width: 70%;
   height: 80%;
 }
 
 .box-img {
+  height: 100%;
   background-image: url(../img/item1.svg);
   background-size: contain;
   background-repeat: no-repeat;
+  flex: 7;
+}
+
+.box-txt {
+  flex: 5;
+}
+
+.box-txt h1 {
+  padding-bottom: 40px;
+}
+
+.box-txt p {
+  padding-bottom: 40px;
 }
 
 /* 
@@ -180,14 +192,6 @@ header .hello-box {
  */
 
 /* flex */
-.flex-5 {
-  flex: 5;
-}
-
-.flex-7 {
-  flex: 7;
-}
-
 .flex-2 {
   flex: 2;
 }
