--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,15 @@ header .hello-box {
   height: 500px;
 }
 
+.wrapper.double {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid gray 2px;
+  width: 100%;
+  height: 1000px;
+}
+
 .box {
   display: flex;
   flex-direction: row;
@@ -148,6 +157,14 @@ header .hello-box {
   padding-bottom: 40px;
 }
 
+.r-box {
+  text-align: center;
+}
+
+.r-box p {
+  font-size: 13px;
+}
+
 /* items */
 
 .item-1 {
@@ -174,55 +191,10 @@ header .hello-box {
   flex: 7;
 }
 
-/* da verificare */
-.hello-box-2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: dashed black 2px;
-  width: 50%;
-  height: 95%;
-  margin: 0 0 20px 0;
-}
-
-.wrapper.double {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: solid gray 2px;
-  width: 100%;
-  height: 1000px;
-}
-
-.hello-box .box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-}
-
-.hello-box-2 .box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-}
-.brd-white {
-  border: dashed white 2px;
-}
-
-.brd-black {
-  border: dashed black 2px;
-}
-/* fino a qui */
-
 /* flex */
 .flex-2 {
   flex: 2;
 }
-
 .flex-4 {
   flex: 4;
 }
