--- a/css/style.css
+++ b/css/style.css
@@ -118,13 +118,12 @@ header .hello-box {
   height: 500px;
 }
 
-.wrapper.double {
+.wrapper-big {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid gray 2px;
   width: 100%;
-  height: 1000px;
+  height: 800px;
 }
 
 .box {
@@ -141,8 +140,9 @@ header .hello-box {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 70%;
-  height: 80%;
+  min-height: 800px;
 }
 
 .box-txt {
@@ -155,10 +155,6 @@ header .hello-box {
 
 .box-txt p {
   padding-bottom: 40px;
-}
-
-.r-box {
-  text-align: center;
 }
 
 .r-box p {
@@ -191,9 +187,17 @@ header .hello-box {
   flex: 7;
 }
 
+.item-4 {
+  background-image: url(../img/item4-big.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  flex: 8;
+}
+
 /* flex */
-.flex-2 {
-  flex: 2;
+.flex-1 {
+  flex: 1;
 }
 .flex-4 {
   flex: 4;
