--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ header .hello-box {
   align-items: center;
   width: 100%;
   height: 800px;
+  margin-top: 200px;
 }
 
 .box {
@@ -191,8 +192,8 @@ header .hello-box {
   background-image: url("../img/item4-big.svg");
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100%;
-  flex: 8;
+  width: 70%;
+  flex: 20;
 }
 
 .logo-stars {
@@ -200,7 +201,11 @@ header .hello-box {
   background-size: contain;
   background-repeat: no-repeat;
   width: 60%;
-  flex: 1;
+  flex: 15;
+}
+
+.logo-stars h2 {
+  margin-top: 30px;
 }
 
 /* flex */
